return username and user id on successfull login or register
