# src/handlers/login.go
@@ -2,14 +2,14 @@ package handlers
 
 import (
 	"github.com/Gamify-IT/login-backend/src/gen/db"
-	"github.com/Gamify-IT/login-backend/src/gen/restapi/operations"
+	"github.com/Gamify-IT/login-backend/src/gen/models"
 	"github.com/Gamify-IT/login-backend/src/gen/restapi/operations/login"
 	"github.com/go-openapi/runtime/middleware"
 	"golang.org/x/crypto/bcrypt"
 )
 
 // loginUser let a user log in
-func loginUser(api *operations.LoginAPI, client *db.PrismaClient) login.PostLoginHandlerFunc {
+func loginUser(client *db.PrismaClient) login.PostLoginHandlerFunc {
 	return login.PostLoginHandlerFunc(func(params login.PostLoginParams) middleware.Responder {
 		username := params.Body.Username
 		password := params.Body.Password
@@ -19,7 +19,9 @@ func loginUser(api *operations.LoginAPI, client *db.PrismaClient) login.PostLogi
 		user, err := client.User.FindFirst(db.User.Name.Equals(*username)).Exec(params.HTTPRequest.Context())
 
 		if err != nil {
-			return login.NewPostLoginInternalServerError()
+			return login.NewPostLoginInternalServerError().WithPayload(&models.LoginError{
+				Message: "Error finding existing user in database",
+			})
 		}
 
 		if user == nil {
@@ -30,7 +32,10 @@ func loginUser(api *operations.LoginAPI, client *db.PrismaClient) login.PostLogi
 			return login.NewPostLoginBadRequest()
 		}
 
-		return login.NewPostLoginOK()
+		return login.NewPostLoginOK().WithPayload(&models.User{
+			ID:   user.ID,
+			Name: user.Name,
+		})
 
 	})
 }
